--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,8 @@
       <img src="images/menu.svg" class='img-menu'>
       <nav>
         <ul class='meni'>
-          <li><a href="index.html" class='meni-gumb'>Domov</a></li>
           <li><a href="band.html" class='meni-gumb'>Bend</a></li>
-          <li><a href="events.html" class='meni-gumb'>Špili</a></li>
-          <li><a href="cv.html" class='meni-gumb'>Odigrano</a></li>
+          <li><a href="events.html" class='meni-gumb'>Koncerti</a></li>
           <li><a href="contact.html" class='meni-gumb'>Kontakt</a></li>
         </ul>
       </nav>
