--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@ function closeNav() {
         var menu = document.querySelector('ul'),
             menulink = document.querySelector('img');
 
-        menulink.addEventListener('click', function(e) {
+        menulink.addEventListener('mouseover', function(e) {
             menu.classList.toggle('active');
-            e.preventDefault();
+              e.preventDefault();
 
         });
     })();
