--- a/band.html
+++ b/band.html
@@ -13,7 +13,8 @@
         <div id="avatar"></div>
         <figcaption>Groovocado</figcaption>
       </figure>
-      <img src="images/menu.svg" class='img-menu'>
+      <img src="images/Groovocado-Logo-Avokado-Crnl.png" class='img-menu'>
+	  <img src="images/Groovocado-Logotip-Horizontalen-Bel.png" class='img-menu-web'>
       <nav>
         <ul class='meni'>
           <li><a href="band.html" class='meni-gumb'>Bend</a></li>
@@ -76,7 +77,7 @@
 <div class="fotka-clana">
       <img src="images/photo-tina.jpg"  class='photo'>
       <h3>Tina</h3>
-      <h4>Vokal. Oba.</h>
+      <h4>Vokal. Oba.</h4>
 		<div class="container">
       <h2>Tina</h2>
         <p>Rodila se je ob tuljenju volkov in parjenju jelenov v Neki Šumi. Svoja mladostniška leta je preživela v isti Neki Šumi, kjer so jo volkovi naučili posebne tehnike petja, jeleni pa posebne tehnike … prezence. </p>
@@ -85,7 +86,7 @@
 <div class="fotka-clana">
       <img src="images/photo-gregor.jpg"  class='photo'>
         <h3>Grega</h3>
-        <h4>Truba, vokal</h>
+        <h4>Truba, vokal</h4>
 		<div class="container">
       <h2>Grega</h2>
         <p>Izhaja iz plemena pohorskih samurajev Kišank. Ker lov na divje merjasce več ni zadostil njegovim potrebam po umetniškem izražanju, je začel igrat trobento. On ni pridobil nič, merjasci mnogo, svet pa je pridobil krasnega trobentarja. </p>
