--- a/events.html
+++ b/events.html
@@ -26,11 +26,10 @@
       <div>
         <img class='img-main-logo' style="width:50vh;heighft:auto;" src="images/Groovocado-Logotip-Vertikalen-Crn.png">
       </div>
-      <h1>Prihajajoči koncerti</h1>
-  <div class='photo-grid-dogodek'>
+    <div class='photo-grid-dogodek'>
 	 <div class="dogodek">
 		<a href="https://www.facebook.com/patriotslovenskekonjice/">
-      	<img src="images/patriot_groovocado.jpg" class='photo-upcomming'>
+      	<img src="images/patriot_groovocado_horizontal.jpg" style="width:15vw;height:auto;" class='photo-upcomming'>
 		</a>
 		<div class="opis-dogodka">
 			<h2>MC PATRIOT, 3.2.2019</h2>
@@ -44,7 +43,7 @@
  <div class='photo-grid'>
 <div class="event-photo">
  <a href="https://www.facebook.com/groovocado/photos/a.266575633690573/756756181339180/">
-     <img src="images/groovocado_kgb18_2.jpg" style="width:20vw;height:auto;" class='photo'>
+     <img src="images/groovocado_kgb18_2.jpg" style="width:15vw;height:auto;" class='photo'>
  </a>
  <div class="container">
    <h2>BOZICNI KGB, 25.12.2018</h2>
@@ -54,7 +53,7 @@
 
 <div class="event-photo">
  <a href="https://www.facebook.com/groovocado/photos/a.266575633690573/756756181339180/">
-     <img src="images/groovocado_veselidecember18.jpg" style="width:20vw;height:auto;" class='photo'>
+     <img src="images/groovocado_veselidecember18.jpg" style="width:15vw;height:auto;" class='photo'>
  </a>
  <div class="container">
    <h2>VESELI DECEMBER, 30.11.2018</h2>
@@ -63,7 +62,7 @@
 
 <div class="event-photo">
  <a href="https://www.facebook.com/groovocado/photos/gm.707853986256132/738594339822031/">
-     <img src="images/groovocado_prulcek18_2.jpg" style="width:20vw;height:auto;" class='photo'>
+     <img src="images/groovocado_prulcek18_2.jpg" style="width:15vw;height:auto;" class='photo'>
  </a>
  <div class="container">
    <h2>(PRE)HALLOWEEN PRULCEK, 30.11.2018</h2>
@@ -72,7 +71,7 @@
 
 <div class="event-photo">
  <a href="https://www.facebook.com/media/set/?set=a.642128822801917&type=1&l=87a2f3b89b/">
-     <img src="images/groovocado_festivallent18.jpg" style="width:20vw;height:auto;" class='photo'>
+     <img src="images/groovocado_festivallent18.jpg" style="width:15vw;height:auto;" class='photo'>
  </a>
  <div class="container">
    <h2>FESTIVAL LENT, 23.6.2018</h2>
@@ -81,7 +80,7 @@
 
 <div class="event-photo">
  <a href="https://www.facebook.com/media/set/?set=a.633470413667758&type=1&l=a0de2403dd/">
-     <img src="images/groovocado_kgb18_1.jpg" style="width:20vw;height:auto;" class='photo'>
+     <img src="images/groovocado_kgb18_1.jpg" style="width:15vw;height:auto;" class='photo'>
  </a>
  <div class="container">
    <h2>KGB, 15.6.2018</h2>
@@ -90,7 +89,7 @@
 
 <div class="event-photo">
  <a href="https://www.facebook.com/media/set/?set=a.620580854956714&type=1&l=a40f9697ae/">
-     <img src="images/groovocado_prulcek18_1.jpg" style="width:20vw;height:auto;" class='photo'>
+     <img src="images/groovocado_prulcek18_1.jpg" style="width:15vw;height:auto;" class='photo'>
  </a>
  <div class="container">
    <h2>PRULCEK, 24.5.2018</h2>
@@ -100,7 +99,7 @@
 
 <div class="event-photo">
  <a href="https://www.facebook.com/groovocado/photos/a.497771070571027/497771053904362/">
-     <img src="images/groovocado_letnioderruse17.jpg" style="width:20vw;height:auto;" class='photo'>
+     <img src="images/groovocado_letnioderruse17.jpg" style="width:15vw;height:auto;" class='photo'>
  </a>
  <div class="container">
    <h2>LETNI ODER RUSE w/ Bajaga, 26.8.2017</h2>
@@ -109,7 +108,7 @@
 
 <div class="event-photo">
  <a href="https://www.facebook.com/media/set/?set=a.446731425674992&type=1&l=658a901467/">
-     <img src="images/groovocado_satchmo17.jpg" style="width:20vw;height:auto;" class='photo'>
+     <img src="images/groovocado_satchmo17.jpg" style="width:15vw;height:auto;" class='photo'>
  </a>
  <div class="container">
    <h2>JAZZ CLUB SATCHMO, 5.5.2017</h2>
@@ -118,7 +117,7 @@
 
 <div class="event-photo">
  <a href="https://www.facebook.com/media/set/?set=a.269305380084265&type=1&l=e2c0bf4bdc/">
-     <img src="images/groovocado_satchmo16.jpg" style="width:20vw;height:auto;" class='photo'>
+     <img src="images/groovocado_satchmo16.jpg" style="width:15vw;height:auto;" class='photo'>
  </a>
  <div class="container">
    <h2>JAZZ CLUB SATCHMO, 14.5.2016</h2>
