--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,7 @@
       </div>
       <h1>Kontakt</h1>
       <div class='kontakt'>
-        <p style='text-align: justify' class='opis'>
-          Groovocado je eden najbolj zdravih muzikadežev na Zemlji, saj v večjih količinah vsebuje življenjsko esencialna hranila, kot so soul, funk, disco, pop, rokenrol, bisere 80-ih in 90-ih. Poleg tega vsebuje tudi lepe brade, negovane lase in lastnega Jezusa. Blagodejno učinkuje proti stresu, dolgčasu, nelagodju in po zadnjih študijah tudi stanju, imenovanem safr. 9 živahnih glasbenikov bo razmigalo vašo ritko!
-        </p>
+        <p style='text-align: justify' class='opis'>Groovocado je eden najbolj zdravih muzikadežev na Zemlji, saj v večjih količinah vsebuje življenjsko esencialna hranila, kot so soul, funk, disco, pop, rokenrol, bisere 80-ih in 90-ih. Poleg tega vsebuje tudi lepe brade, negovane lase in lastnega Jezusa. Blagodejno učinkuje proti stresu, dolgčasu, nelagodju in po zadnjih študijah tudi stanju, imenovanem safr. 9 živahnih glasbenikov bo razmigalo vašo ritko!</p>
         <p>Igramo na porokah, vaških veselicah, rojstnih dnevih, občinskih festivalih, v glavnem, povsod! Pripravimo lahko tudi do 3 sete po 45 minut, naš trenutni repertoar pa zasega malenksot čez 60 komadov. Za vse nadaljne informacije smo vam na voljo po elektronski pošti oziroma telefonski številki:</p>
         <p>Email: groovocado@gmail.com</p>
         <p>GSM (Tine): ???</p>
