--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
   </head>
   <body>
 	<div id="myNav" class="overlay">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+
   <div class="overlay-content">
     <nav>
       <ul class='meni'>
-        <li><a href="index.html" class='meni-gumb'>Domov</a></li>
         <li><a href="band.html" class='meni-gumb'>Bend</a></li>
-        <li><a href="events.html" class='meni-gumb'>Špili</a></li>
-        <li><a href="cv.html" class='meni-gumb'>Odigrano</a></li>
+        <li><a href="events.html" class='meni-gumb'>Koncerti</a></li>
         <li><a href="contact.html" class='meni-gumb'>Kontakt</a></li>
       </ul>
     </nav>
-    <div class="noga">
+	<div class='noga-meni'>
+    <div class='noga'>
       <ul class='noga-item-box'>
         <li><a href="https://www.facebook.com/groovocado/"><img style="display: inline; margin: 0;" class="noga-slike" src="images/facebook.svg"></a></li>
         <li><a href="https://www.instagram.com/groovocado/"><img style="display: inline; margin: 0;" class="noga-slike" src="images/instagram.svg"></a></li>
@@ -28,6 +27,7 @@
         <li><a href="#"><img style="display: inline; margin: 0;" class="noga-slike" src="images/google-plus.svg"></a></li>
       </ul>
     </div>
+  </div>
   </div>
 </div>
 
@@ -63,6 +63,14 @@ function closeNav() {
     </script>
   </body>
   <footer>
-
+    <div class="noga">
+      <ul class='noga-item-box'>
+        <li><a href="https://www.facebook.com/groovocado/"><img style="display: inline; margin: 0;" class="noga-slike" src="images/facebook.svg"></a></li>
+        <li><a href="https://www.instagram.com/groovocado/"><img style="display: inline; margin: 0;" class="noga-slike" src="images/instagram.svg"></a></li>
+        <li><a href="https://www.youtube.com/channel/UC5nTzsBsCWtVDfwRfUtardw"><img style="display: inline; margin: 0;" class="noga-slike" src="images/youtube.svg"></a></li>
+        <li><a href="#"><img style="display: inline; margin: 0;" class="noga-slike" src="images/google-plus.svg"></a></li>
+      </ul>
+    </div>
+  </div>
   </footer>
 </html>
