--- a/events.html
+++ b/events.html
@@ -13,10 +13,12 @@
         <div id="avatar"></div>
         <figcaption>Groovocado</figcaption>
       </figure>
-      <img src="images/menu.svg" class='img-menu'>
+      <img src="images/Groovocado-Logo-Avokado-Crnl.png" class='img-menu'>
+	  <img src="images/Groovocado-Logotip-Horizontalen-Bel.png" class='img-menu-web'>
+      
       <nav>
         <ul class='meni'>
-          <li><a href="band.html" class='meni-gumb'>Bend</a></li>
+          <li><a href="band.html" class='meni-gumb'>Band</a></li>
           <li><a href="events.html" class='meni-gumb'>Koncerti</a></li>
           <li><a href="contact.html" class='meni-gumb'>Kontakt</a></li>
         </ul>
@@ -26,6 +28,8 @@
       <div>
         <img class='img-main-logo' style="width:50vh;heighft:auto;" src="images/Groovocado-Logotip-Vertikalen-Crn.png">
       </div>
+	 
+	  
     <div class='photo-grid-dogodek'>
 	 <div class="dogodek">
 		<a href="https://www.facebook.com/patriotslovenskekonjice/">
