--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="overlay-content">
     <nav>
       <ul class='meni'>
-        <li><a href="band.html" class='meni-gumb'>Bend</a></li>
+        <li><a href="band.html" class='meni-gumb'>Band</a></li>
         <li><a href="events.html" class='meni-gumb'>Koncerti</a></li>
         <li><a href="contact.html" class='meni-gumb'>Kontakt</a></li>
       </ul>
