--- a/band.html
+++ b/band.html
@@ -35,10 +35,8 @@
       <h4>Kitara</h4>
 		<div class="container">
 <h2>Nejc</h2>
-		 <h5>62. reinkarnacija Jezusa. Potem ko je z 60. in 61. reinkarnacijo šlo močno narobe, je Nejc predstavnik nove, moderne dobe Jezusovih reinkarnacij. Po eni strani nazaj k osnovam, po drugi čista progresiva. Gori gruntajo dalje.</h5>
-		 <p>62. reinkarnacija Jezusa.</p>
-		 <p>Diva</p>
-		 <p>Prepoved mikrofona</p>
+<h5>The Diva</h5>
+		 <p>62. reinkarnacija Jezusa. Potem ko je z 60. in 61. reinkarnacijo šlo močno narobe, je Nejc predstavnik nove, moderne dobe Jezusovih reinkarnacij. Po eni strani nazaj k osnovam, po drugi čista progresiva. Gori gruntajo dalje.</p>
        </div>
 	</div>
 	<div class="fotka-clana">
@@ -47,10 +45,8 @@
       <h4>Bas</h4>
 		<div class="container">
 <h2>Rok</h2>
-<h5>Vesoljec. Podobno kot Superman je prišel na svet da bi ga rešil ali vsaj naredil boljšega. Kmalu je obupal in začel igrat bas kitaro. Svet je ostal tak kot je. </h5>
-        <p>Vesoljec.</p>
-		<p>"Malo več old skul funka"</p>
-		<p>Vedno točen na vaje</p>
+<h5>Vesoljec.</h5>
+<p>Podobno kot Superman je prišel na svet da bi ga rešil ali vsaj naredil boljšega. Kmalu je obupal in začel igrat bas kitaro. Svet je ostal tak kot je. </p>
 </div>
 	</div>
 	<div class="fotka-clana">
@@ -59,8 +55,9 @@
       <h4>Vokal</h4>
 		<div class="container">
 <h2>Monika</h2>
-<h5>The original frontwoman! Skozi uporniško fazo je skozi težke metalske harmonije, kolikor se temu lahko sploh reče harmonija, prišla do zaključka, da je edina prava muzika, party muzika!</h5>
-        <p>The original frontwoman! Skozi uporniško fazo najstvištva je skozi težke metalske harmonije, kolikor se temu lahko sploh reče harmonija, prišla do zaključka, da je edina prava muzika, party muzika! Beyonce pravi, da sta si v sorodu, vendar Monika to vztrajno zanika.</p>
+<h5>Vokal</h5>
+<p>The original frontwoman! Skozi uporniško fazo je skozi težke metalske harmonije, kolikor se temu lahko sploh reče harmonija, prišla do zaključka, da je edina prava muzika, party muzika!</p>
+        
 </div>
 	</div>
 <div class="fotka-clana">
@@ -70,8 +67,8 @@
 		<div class="container">
             <h2>Tine</h2>
 			<h5>Kak sn doer, ne.</h5>
-			<h5>Čeprav to dobro skriva, mu na notranji strani leve bedre piše »made in China«. Ne hvali se s tem da je Yamaha - endorser. S tem se ne hvali niti Yamaha.</h5>
-        <p>Že kot otrok prevelik in prežejen za vsako dojko, zato so ga dojili s cisterno. Čeprav to dobro skriva, mu na notranji strani leve bedre piše »made in China«. Ne hvali se s tem da je Yamaha - endorser. S tem se ne hvali niti Yamaha. </p>
+			<p>Čeprav to dobro skriva, mu na notranji strani leve bedre piše »made in China«. Ne hvali se s tem da je Yamaha - endorser. S tem se ne hvali niti Yamaha.</p>
+        
 </div>
 	</div>
 <div class="fotka-clana">
@@ -80,9 +77,9 @@
       <h4>Saks</h4>
 		<div class="container">
       <h2>Sašo</h2>
-	  <h5>Drava je naplavila sondo, noter pa je bil, zvit klopčič, on. Sonda je bila namenjena v Zg. Duplek, a jo je naplavilo v MB, do Dupleka je Sašo iskal kar 18 let. Ko je »probal« Duplek, je želel nazaj. Danes še išče.</h5>
-        <p>Drava je naplavila sondo v obliki špricerja, noter pa je bil, zvit klopčič, on. Sonda je bila namenjena v Zg. Duplek, a jo je naplavilo v MB, do Dupleka je Sašo iskal kar 18 let. Ko je »probal« Duplek, je želel nazaj. Kamorkoli. Danes še išče. </p>
-</div>
+	  <h5>Saks.</h5>
+	  <p>Drava je naplavila sondo, noter pa je bil, zvit klopčič, on. Sonda je bila namenjena v Zg. Duplek, a jo je naplavilo v MB, do Dupleka je Sašo iskal kar 18 let. Ko je »probal« Duplek, je želel nazaj. Danes še išče.</p>
+   </div>
 	</div>
 <div class="fotka-clana">
       <img src="images/photo-tina.jpg"  class='photo'>
@@ -90,8 +87,8 @@
       <h4>Vokal</h4>
 		<div class="container">
       <h2>Tina</h2>
-	  <h5>Rodila se je ob tuljenju volkov in parjenju jelenov v Neki Šumi. Svoja mladostniška leta je preživela v isti Neki Šumi, kjer so jo volkovi naučili posebne tehnike petja, jeleni pa posebne tehnike … prezence.</h5>
-        <p>Rodila se je ob tuljenju volkov in parjenju jelenov v Neki Šumi. Svoja mladostniška leta je preživela v isti Neki Šumi, kjer so jo volkovi naučili posebne tehnike petja, jeleni pa posebne tehnike … prezence. </p>
+	  <h5>Vokal 2.</h5>
+	  <p>Rodila se je ob tuljenju volkov in parjenju jelenov v Neki Šumi. Svoja mladostniška leta je preživela v isti Neki Šumi, kjer so jo volkovi naučili posebne tehnike petja, jeleni pa posebne tehnike … prezence.</p>
 </div>
 	</div>
 <div class="fotka-clana">
@@ -100,8 +97,8 @@
         <h4>Truba, vokal</h4>
 		<div class="container">
       <h2>Grega</h2>
-	  <h5>Izhaja iz plemena pohorskih samurajev Kišank. Ker lov na divje merjasce več ni zadostil njegovim potrebam po umetniškem izražanju, je začel igrat trobento. On ni pridobil nič, merjasci mnogo, svet pa je pridobil krasnega trobentarja.</h5>
-        <p>Izhaja iz plemena pohorskih samurajev Kišank. Ker lov na divje merjasce več ni zadostil njegovim potrebam po umetniškem izražanju, je začel igrat trobento. On ni pridobil nič, merjasci mnogo, svet pa je pridobil krasnega trobentarja. </p>
+	  <h5>Truba.</h5>
+	  <p>Izhaja iz plemena pohorskih samurajev Kišank. Ker lov na divje merjasce več ni zadostil njegovim potrebam po umetniškem izražanju, je začel igrat trobento. On ni pridobil nič, merjasci mnogo, svet pa je pridobil krasnega trobentarja.</p>
 </div>
 	</div>
 <div class="fotka-clana">
@@ -110,9 +107,9 @@
         <h4>Dolga truba</h4>
 		<div class="container">
       <h2>Maki</h2>
-	  <h5>a začetku je bil le kepica brade in frizure. Ko je odkril čare pozavne, so čari pozavne padli v krizo identitete in kupili poršeja.</h5>
-      <p>Na začetku je bil le kepica brade in frizure, ki je rasla ob zalivanju s premium gnojilom-pivom. Ko je odkril čare pozavne, so čari pozavne padli v krizo identitete in kupili poršeja. </p>
-</div>
+	  <h5>Funny man.</h5>
+	  <p>a začetku je bil le kepica brade in frizure. Ko je odkril čare pozavne, so čari pozavne padli v krizo identitete in kupili poršeja.</p>
+     </div> 
 	</div>
 <div class="fotka-clana">
       <img src="images/photo-jure.jpg"  class='photo'>
@@ -120,8 +117,8 @@
       <h4>Bobni, vokal</h4>
 		<div class="container">
       <h2>Jure</h2>
-	  <h5>Nastal je iz smeha. V svojem genu ima poseben gen, »fotoGEN«, kar lahko opazite na neštetih slikah. Zavidajo mu tako manekenke kot tudi womanekenke.</h5>
-        <p>Nastal je iz smeha. V svojem genu ima poseben gen, »fotoGEN«, kar lahko opazite na neštetih slikah. Zavidajo mu tako manekenke kot tudi womanekenke. </p>
+	  <h5>D mašin.</h5>
+	  <p>Nastal je iz smeha. V svojem genu ima poseben gen, »fotoGEN«, kar lahko opazite na neštetih slikah. Zavidajo mu tako manekenke kot tudi womanekenke.</p>
       </div>
 </div>
 	</div>
