--- a/band.html
+++ b/band.html
@@ -17,9 +17,10 @@
 	  <img src="images/Groovocado-Logotip-Horizontalen-Bel.png" class='img-menu-web'>
       <nav>
         <ul class='meni'>
-          <li><a href="band.html" class='meni-gumb'>Band</a></li>
           <li><a href="events.html" class='meni-gumb'>Koncerti</a></li>
+          <li><a href="band.html" class='meni-gumb'>Band</a></li>
           <li><a href="contact.html" class='meni-gumb'>Kontakt</a></li>
+          <li><a href="media.html" class='meni-gumb'>Za medije</a></li>
         </ul>
       </nav>
     </aside>
@@ -31,93 +32,93 @@
 
 	<div class="fotka-clana">
       <img src="images/photo-nejc.jpg"  class='photo'>
-      <h3>Nejc</h3>
+      <h3>Nejc Kosanič</h3>
       <h4>Kitara</h4>
 		<div class="container">
-<h2>Nejc</h2>
-<h5>The Diva</h5>
+<h2>Nejc Kosanič</h2>
+<h5>Kitara</h5>
 		 <p>62. reinkarnacija Jezusa. Potem ko je z 60. in 61. reinkarnacijo šlo močno narobe, je Nejc predstavnik nove, moderne dobe Jezusovih reinkarnacij. Po eni strani nazaj k osnovam, po drugi čista progresiva. Gori gruntajo dalje.</p>
        </div>
 	</div>
 	<div class="fotka-clana">
       <img src="images/photo-rok.jpg"  class='photo'>
-      <h3>Rok</h3>
-      <h4>Bas</h4>
+      <h3>Rok Šeško</h3>
+      <h4>Bas kitara</h4>
 		<div class="container">
-<h2>Rok</h2>
-<h5>Vesoljec.</h5>
+<h2>Rok Šeško</h2>
+<h5>Bas kitara</h5>
 <p>Podobno kot Superman je prišel na svet da bi ga rešil ali vsaj naredil boljšega. Kmalu je obupal in začel igrat bas kitaro. Svet je ostal tak kot je. </p>
 </div>
 	</div>
 	<div class="fotka-clana">
       <img src="images/photo-monika.jpg"  class='photo'>
-      <h3>Monika</h3>
+      <h3>Monika Mulec</h3>
       <h4>Vokal</h4>
 		<div class="container">
-<h2>Monika</h2>
+<h2>Monika Mulec</h2>
 <h5>Vokal</h5>
 <p>The original frontwoman! Skozi uporniško fazo je skozi težke metalske harmonije, kolikor se temu lahko sploh reče harmonija, prišla do zaključka, da je edina prava muzika, party muzika!</p>
-        
+
 </div>
 	</div>
 <div class="fotka-clana">
       <img src="images/photo-tine.jpg"  class='photo'>
-      <h3>Tine</h3>
+      <h3>Tine Berglez</h3>
       <h4>Klavir, vokal</h4>
 		<div class="container">
-            <h2>Tine</h2>
-			<h5>Kak sn doer, ne.</h5>
+            <h2>Tine Berglez</h2>
+			<h5>Kak sn doer, ne. Klavirr.</h5>
 			<p>Čeprav to dobro skriva, mu na notranji strani leve bedre piše »made in China«. Ne hvali se s tem da je Yamaha - endorser. S tem se ne hvali niti Yamaha.</p>
-        
+
 </div>
 	</div>
 <div class="fotka-clana">
       <img src="images/photo-saso.jpg"  class='photo'>
-      <h3>Sašo</h3>
+      <h3>Sašo Fekonja</h3>
       <h4>Saks</h4>
 		<div class="container">
-      <h2>Sašo</h2>
+      <h2>Sašo Fekonja</h2>
 	  <h5>Saks.</h5>
 	  <p>Drava je naplavila sondo, noter pa je bil, zvit klopčič, on. Sonda je bila namenjena v Zg. Duplek, a jo je naplavilo v MB, do Dupleka je Sašo iskal kar 18 let. Ko je »probal« Duplek, je želel nazaj. Danes še išče.</p>
    </div>
 	</div>
 <div class="fotka-clana">
       <img src="images/photo-tina.jpg"  class='photo'>
-      <h3>Tina</h3>
+      <h3>Tina Ritlop</h3>
       <h4>Vokal</h4>
 		<div class="container">
-      <h2>Tina</h2>
-	  <h5>Vokal 2.</h5>
+      <h2>Tina Ritlop</h2>
+	  <h5>Vokal</h5>
 	  <p>Rodila se je ob tuljenju volkov in parjenju jelenov v Neki Šumi. Svoja mladostniška leta je preživela v isti Neki Šumi, kjer so jo volkovi naučili posebne tehnike petja, jeleni pa posebne tehnike … prezence.</p>
 </div>
 	</div>
 <div class="fotka-clana">
       <img src="images/photo-gregor.jpg"  class='photo'>
-        <h3>Grega</h3>
+        <h3>Grega Preložnik</h3>
         <h4>Truba, vokal</h4>
 		<div class="container">
-      <h2>Grega</h2>
-	  <h5>Truba.</h5>
+      <h2>Grega Preložnik</h2>
+	  <h5>Truba, vokal</h5>
 	  <p>Izhaja iz plemena pohorskih samurajev Kišank. Ker lov na divje merjasce več ni zadostil njegovim potrebam po umetniškem izražanju, je začel igrat trobento. On ni pridobil nič, merjasci mnogo, svet pa je pridobil krasnega trobentarja.</p>
 </div>
 	</div>
 <div class="fotka-clana">
       <img src="images/photo-maki.jpg"  class='photo'>
-      <h3>Maki</h3>
+      <h3>Marko Makuc - Maki</h3>
         <h4>Dolga truba</h4>
 		<div class="container">
-      <h2>Maki</h2>
-	  <h5>Funny man.</h5>
+      <h2>MMarko Makuc - Maki</h2>
+	  <h5>Dolga truba</h5>
 	  <p>a začetku je bil le kepica brade in frizure. Ko je odkril čare pozavne, so čari pozavne padli v krizo identitete in kupili poršeja.</p>
-     </div> 
+     </div>
 	</div>
 <div class="fotka-clana">
       <img src="images/photo-jure.jpg"  class='photo'>
-      <h3>Jure</h3>
+      <h3>Jure Skaza</h3>
       <h4>Bobni, vokal</h4>
 		<div class="container">
-      <h2>Jure</h2>
-	  <h5>D mašin.</h5>
+      <h2>Jure Skaza</h2>
+	  <h5>Dobni, vokal</h5>
 	  <p>Nastal je iz smeha. V svojem genu ima poseben gen, »fotoGEN«, kar lahko opazite na neštetih slikah. Zavidajo mu tako manekenke kot tudi womanekenke.</p>
       </div>
 </div>
@@ -145,7 +146,6 @@
         <li><a href="https://www.facebook.com/groovocado/"><img style="display: inline; margin: 0;" class="noga-slike" src="images/facebook.svg"></a></li>
         <li><a href="https://www.instagram.com/groovocado/"><img style="display: inline; margin: 0;" class="noga-slike" src="images/instagram.svg"></a></li>
         <li><a href="https://www.youtube.com/channel/UC5nTzsBsCWtVDfwRfUtardw"><img style="display: inline; margin: 0;" class="noga-slike" src="images/youtube.svg"></a></li>
-        <li><a href="#"><img style="display: inline; margin: 0;" class="noga-slike" src="images/google-plus.svg"></a></li>
       </ul>
     </div>
   </footer>
