--- a/events.html
+++ b/events.html
@@ -15,12 +15,13 @@
       </figure>
       <img src="images/Groovocado-Logo-Avokado-Crnl.png" class='img-menu'>
 	  <img src="images/Groovocado-Logotip-Horizontalen-Bel.png" class='img-menu-web'>
-      
+
       <nav>
         <ul class='meni'>
-          <li><a href="band.html" class='meni-gumb'>Band</a></li>
           <li><a href="events.html" class='meni-gumb'>Koncerti</a></li>
+          <li><a href="band.html" class='meni-gumb'>Band</a></li>
           <li><a href="contact.html" class='meni-gumb'>Kontakt</a></li>
+          <li><a href="media.html" class='meni-gumb'>Za medije</a></li>
         </ul>
       </nav>
     </aside>
@@ -28,8 +29,8 @@
       <div>
         <img class='img-main-logo' style="width:50vh;heighft:auto;" src="images/Groovocado-Logotip-Vertikalen-Crn.png">
       </div>
-	 
-	  
+
+
     <div class='photo-grid-dogodek'>
 	 <div class="dogodek">
 		<a href="https://www.facebook.com/patriotslovenskekonjice/">
@@ -151,7 +152,6 @@
         <li><a href="https://www.facebook.com/groovocado/"><img style="display: inline; margin: 0;" class="noga-slike" src="images/facebook.svg"></a></li>
         <li><a href="https://www.instagram.com/groovocado/"><img style="display: inline; margin: 0;" class="noga-slike" src="images/instagram.svg"></a></li>
         <li><a href="https://www.youtube.com/channel/UC5nTzsBsCWtVDfwRfUtardw"><img style="display: inline; margin: 0;" class="noga-slike" src="images/youtube.svg"></a></li>
-        <li><a href="#"><img style="display: inline; margin: 0;" class="noga-slike" src="images/google-plus.svg"></a></li>
       </ul>
     </div>
   </footer>
