--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
   <div class="overlay-content">
     <nav>
       <ul class='meni'>
-        <li><a href="band.html" class='meni-gumb'>Band</a></li>
         <li><a href="events.html" class='meni-gumb'>Koncerti</a></li>
+        <li><a href="band.html" class='meni-gumb'>Band</a></li>
         <li><a href="contact.html" class='meni-gumb'>Kontakt</a></li>
+        <li><a href="media.html" class='meni-gumb'>Za medije</a></li>
       </ul>
     </nav>
   </div>
@@ -35,6 +36,7 @@ function closeNav() {
 	 <div>
 		<span style="font-size:30px;cursor:pointer" onclick="openNav()"> <img class='img-main-logo1' style="width:50vh;heighft:auto;" src="images/Groovocado-Logotip-Vertikalen-Crn.png"></span>
 	</div>
+
 
     </main>
 
@@ -58,7 +60,6 @@ function closeNav() {
         <li><a href="https://www.facebook.com/groovocado/"><img style="display: inline; margin: 0;" class="noga-slike" src="images/facebook.svg"></a></li>
         <li><a href="https://www.instagram.com/groovocado/"><img style="display: inline; margin: 0;" class="noga-slike" src="images/instagram.svg"></a></li>
         <li><a href="https://www.youtube.com/channel/UC5nTzsBsCWtVDfwRfUtardw"><img style="display: inline; margin: 0;" class="noga-slike" src="images/youtube.svg"></a></li>
-        <li><a href="#"><img style="display: inline; margin: 0;" class="noga-slike" src="images/google-plus.svg"></a></li>
       </ul>
     </div>
 
