--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,13 @@
       </figure>
       <img src="images/Groovocado-Logo-Avokado-Crnl.png" class='img-menu'>
 	  <img src="images/Groovocado-Logotip-Horizontalen-Bel.png" class='img-menu-web'>
-      
+
       <nav>
         <ul class='meni'>
-          <li><a href="band.html" class='meni-gumb'>Band</a></li>
           <li><a href="events.html" class='meni-gumb'>Koncerti</a></li>
+          <li><a href="band.html" class='meni-gumb'>Band</a></li>
           <li><a href="contact.html" class='meni-gumb'>Kontakt</a></li>
+          <li><a href="media.html" class='meni-gumb'>Za medije</a></li>
         </ul>
       </nav>
     </aside>
@@ -28,13 +29,15 @@
       <div>
         <img class='img-main-logo' style="width:50vh;heighft:auto;" src="images/Groovocado-Logotip-Vertikalen-Crn.png">
       </div>
-      <h1>Kontakt</h1>
+
       <div class='kontakt'>
+        <p class='opis'>Email: groovocado@gmail.com</p>
+        <p>GSM (Tine): ??? / GSM (Nejc): +386 41 509 565</p>
+        <p href="https://www.facebook.com/groovocado/">Facebook: www.facebook.com/groovocado</p>
+        <p href="https://www.instagram.com/groovocado/">Instagram: www.instagram.com/groovocado</p>
+        <p href="https://www.youtube.com/channel/UC5nTzsBsCWtVDfwRfUtardw">Youtube: www.youtube.com/groovocado</p>
         <p style='text-align: justify' class='opis'>Groovocado je eden najbolj zdravih muzikadežev na Zemlji, saj v večjih količinah vsebuje življenjsko esencialna hranila, kot so soul, funk, disco, pop, rokenrol, bisere 80-ih in 90-ih. Poleg tega vsebuje tudi lepe brade, negovane lase in lastnega Jezusa. Blagodejno učinkuje proti stresu, dolgčasu, nelagodju in po zadnjih študijah tudi stanju, imenovanem safr. 9 živahnih glasbenikov bo razmigalo vašo ritko!</p>
-        <p>Igramo na porokah, vaških veselicah, rojstnih dnevih, občinskih festivalih, v glavnem, povsod! Pripravimo lahko tudi do 3 sete po 45 minut, naš trenutni repertoar pa zasega malenksot čez 60 komadov. Za vse nadaljne informacije smo vam na voljo po elektronski pošti oziroma telefonski številki:</p>
-        <p>Email: groovocado@gmail.com</p>
-        <p>GSM (Tine): ???</p>
-        <p>GSM (Nejc): +386 41 509 565</p>
+        <p class='opis-konec'>Igramo, v glavnem, povsod! Pripravimo lahko krajše ali daljše nastope po dogovoru, naš trenutni repertoar pa zasega malenkost čez 60 komadov. Za vse nadaljne informacije smo vam na voljo po elektronski pošti oziroma telefonski številki, navedeni zgoraj!</p>
       </div>
     </main>
 
@@ -58,7 +61,6 @@
         <li><a href="https://www.facebook.com/groovocado/"><img style="display: inline; margin: 0;" class="noga-slike" src="images/facebook.svg"></a></li>
         <li><a href="https://www.instagram.com/groovocado/"><img style="display: inline; margin: 0;" class="noga-slike" src="images/instagram.svg"></a></li>
         <li><a href="https://www.youtube.com/channel/UC5nTzsBsCWtVDfwRfUtardw"><img style="display: inline; margin: 0;" class="noga-slike" src="images/youtube.svg"></a></li>
-        <li><a href="#"><img style="display: inline; margin: 0;" class="noga-slike" src="images/google-plus.svg"></a></li>
       </ul>
     </div>
   </footer>
