--- a/band.html
+++ b/band.html
@@ -30,6 +30,61 @@
       </div>
       <div class='band-description'>
 
+      <div class="fotka-clana">
+            <img src="images/photo-monika.jpg"  class='photo'>
+            <h3>Monika Mulec</h3>
+            <h4>Vokal</h4>
+      		<div class="container">
+      <h2>Monika Mulec</h2>
+      <h5>Vokal</h5>
+      <p>Skozi uporniško fazo najstniškega rockovstva je prišla do zaključka, da je edina prava muzika, party muzika. Zdaj obožuje tudi ABBO.</p>
+      </div>
+      	</div>
+
+      <div class="fotka-clana">
+              <img src="images/photo-tina.jpg"  class='photo'>
+              <h3>Tina Ritlop</h3>
+              <h4>Vokal</h4>
+        		<div class="container">
+              <h2>Tina Ritlop</h2>
+        	  <h5>Vokal</h5>
+        	  <p>ko ves band je že zbran, potrebuje le še veganski sopran. Ob tuljenju volkov in skovikanju sov se je Tina naučila kako narediti dober šov! </p>
+        </div>
+    	</div>
+
+      <div class="fotka-clana">
+            <img src="images/photo-saso.jpg"  class='photo'>
+            <h3>Sašo Fekonja</h3>
+            <h4>Saks</h4>
+      		<div class="container">
+            <h2>Sašo Fekonja</h2>
+      	  <h5>Saks.</h5>
+      	  <p>Očitno magisterij iz saksa še vedno ni dovolj za punce. </p>
+         </div>
+      	</div>
+
+      <div class="fotka-clana">
+            <img src="images/photo-gregor.jpg"  class='photo'>
+              <h3>Grega Preložnik</h3>
+              <h4>Trobenta, vokal</h4>
+      		<div class="container">
+            <h2>Grega Preložnik</h2>
+      	  <h5>Truba, vokal</h5>
+      	  <p>Izhaja iz plemena pohorskih samurajev Kišank. Ker lov na divje merjasce več ni zadostil njegovim potrebam po umetniškem izražanju, je začel igrat trobento. On ni pridobil nič, merjasci mnogo, svet pa je pridobil krasnega trobentarja.</p>
+      </div>
+      	</div>
+
+      <div class="fotka-clana">
+            <img src="images/photo-maki.jpg"  class='photo'>
+            <h3>Marko Makuc - Maki</h3>
+              <h4>Dolga truba</h4>
+      		<div class="container">
+            <h2>Marko Makuc - Maki</h2>
+      	  <h5>Pozavna</h5>
+      	  <p>Na začetku je bil le kepica brade in frizure. Ko je odkril čare pozavne, so čari pozavne padli v krizo identitete in kupili poršeja.</p>
+           </div>
+      	</div>
+
 	<div class="fotka-clana">
       <img src="images/photo-nejc.jpg"  class='photo'>
       <h3>Nejc Kosanič</h3>
@@ -37,7 +92,7 @@
 		<div class="container">
 <h2>Nejc Kosanič</h2>
 <h5>Kitara</h5>
-		 <p>62. reinkarnacija Jezusa. Potem ko je z 60. in 61. reinkarnacijo šlo močno narobe, je Nejc predstavnik nove, moderne dobe Jezusovih reinkarnacij. Po eni strani nazaj k osnovam, po drugi čista progresiva. Gori gruntajo dalje.</p>
+		 <p>62. reinkarnacija Jezusa. Potem ko je z 60. in 61. reinkarnacijo šlo močno narobe, je Nejc predstavnik nove, moderne dobe Jezusovih reinkarnacij.</p>
        </div>
 	</div>
 	<div class="fotka-clana">
@@ -50,68 +105,20 @@
 <p>Podobno kot Superman je prišel na svet da bi ga rešil ali vsaj naredil boljšega. Kmalu je obupal in začel igrat bas kitaro. Svet je ostal tak kot je. </p>
 </div>
 	</div>
-	<div class="fotka-clana">
-      <img src="images/photo-monika.jpg"  class='photo'>
-      <h3>Monika Mulec</h3>
-      <h4>Vokal</h4>
-		<div class="container">
-<h2>Monika Mulec</h2>
-<h5>Vokal</h5>
-<p>The original frontwoman! Skozi uporniško fazo je skozi težke metalske harmonije, kolikor se temu lahko sploh reče harmonija, prišla do zaključka, da je edina prava muzika, party muzika!</p>
 
-</div>
-	</div>
 <div class="fotka-clana">
       <img src="images/photo-tine.jpg"  class='photo'>
-      <h3>Tine Berglez</h3>
+      <h3>Tine Brglez</h3>
       <h4>Klavir, vokal</h4>
 		<div class="container">
             <h2>Tine Berglez</h2>
-			<h5>Kak sn doer, ne. Klavirr.</h5>
-			<p>Čeprav to dobro skriva, mu na notranji strani leve bedre piše »made in China«. Ne hvali se s tem da je Yamaha - endorser. S tem se ne hvali niti Yamaha.</p>
+			<h5>Kak sn doer, ne. Klavir.</h5>
+			<p>Ne hvali se s tem, da koristi glasbila Yamaha. S tem se ne hvali niti Yamaha.
+</p>
 
 </div>
 	</div>
-<div class="fotka-clana">
-      <img src="images/photo-saso.jpg"  class='photo'>
-      <h3>Sašo Fekonja</h3>
-      <h4>Saks</h4>
-		<div class="container">
-      <h2>Sašo Fekonja</h2>
-	  <h5>Saks.</h5>
-	  <p>Drava je naplavila sondo, noter pa je bil, zvit klopčič, on. Sonda je bila namenjena v Zg. Duplek, a jo je naplavilo v MB, do Dupleka je Sašo iskal kar 18 let. Ko je »probal« Duplek, je želel nazaj. Danes še išče.</p>
-   </div>
-	</div>
-<div class="fotka-clana">
-      <img src="images/photo-tina.jpg"  class='photo'>
-      <h3>Tina Ritlop</h3>
-      <h4>Vokal</h4>
-		<div class="container">
-      <h2>Tina Ritlop</h2>
-	  <h5>Vokal</h5>
-	  <p>Rodila se je ob tuljenju volkov in parjenju jelenov v Neki Šumi. Svoja mladostniška leta je preživela v isti Neki Šumi, kjer so jo volkovi naučili posebne tehnike petja, jeleni pa posebne tehnike … prezence.</p>
-</div>
-	</div>
-<div class="fotka-clana">
-      <img src="images/photo-gregor.jpg"  class='photo'>
-        <h3>Grega Preložnik</h3>
-        <h4>Truba, vokal</h4>
-		<div class="container">
-      <h2>Grega Preložnik</h2>
-	  <h5>Truba, vokal</h5>
-	  <p>Izhaja iz plemena pohorskih samurajev Kišank. Ker lov na divje merjasce več ni zadostil njegovim potrebam po umetniškem izražanju, je začel igrat trobento. On ni pridobil nič, merjasci mnogo, svet pa je pridobil krasnega trobentarja.</p>
-</div>
-	</div>
-<div class="fotka-clana">
-      <img src="images/photo-maki.jpg"  class='photo'>
-      <h3>Marko Makuc - Maki</h3>
-        <h4>Dolga truba</h4>
-		<div class="container">
-      <h2>MMarko Makuc - Maki</h2>
-	  <h5>Dolga truba</h5>
-	  <p>a začetku je bil le kepica brade in frizure. Ko je odkril čare pozavne, so čari pozavne padli v krizo identitete in kupili poršeja.</p>
-     </div>
-	</div>
+
 <div class="fotka-clana">
       <img src="images/photo-jure.jpg"  class='photo'>
       <h3>Jure Skaza</h3>
