--- a/events.html
+++ b/events.html
@@ -33,12 +33,9 @@
 
     <div class='photo-grid-dogodek'>
 	 <div class="dogodek">
-		<a href="https://www.facebook.com/patriotslovenskekonjice/">
-      	<img src="images/patriot_groovocado_horizontal.jpg" style="width:15vw;height:auto;" class='photo-upcomming'>
-		</a>
 		<div class="opis-dogodka">
-			<h2>MC PATRIOT, 3.2.2019</h2>
-        		<p>Za PUSTA groovamo v Konjicah! </p>
+			<h2>trenutno ni napovedanih novih koncertov</h2>
+        		<p>Lahko nam pa pomagaš! klikni na kontakt in nas pokliči, pa bomo skupaj organizirali nepozaben večer zabave in smeha!  </p>
 		        </div>
      	 </div>
 	 </div>
@@ -46,12 +43,22 @@
    <h1>Pretekli koncerti</h1>
 
  <div class='photo-grid'>
+
+   <div class="event-photo">
+		<a href="https://www.facebook.com/media/set/?set=a.2018549728254893&type=1&l=6403f7add4">
+      	<img src="images/groovocado_konjice.jpg" style="width:15vw;height:auto;" class='photo'>
+		</a>
+		<div class="container">
+			<h2>MC PATRIOT, 3.2.2019</h2>
+    		        </div>
+     	 </div>
+
 <div class="event-photo">
  <a href="https://www.facebook.com/groovocado/photos/a.266575633690573/756756181339180/">
      <img src="images/groovocado_kgb18_2.jpg" style="width:15vw;height:auto;" class='photo'>
  </a>
  <div class="container">
-   <h2>BOZICNI KGB, 25.12.2018</h2>
+   <h2>BOŽIČNI KGB, 25.12.2018</h2>
        </div>
 </div>
 
@@ -70,7 +77,16 @@
      <img src="images/groovocado_prulcek18_2.jpg" style="width:15vw;height:auto;" class='photo'>
  </a>
  <div class="container">
-   <h2>(PRE)HALLOWEEN PRULCEK, 30.11.2018</h2>
+   <h2>(PRE) HALLOWEEN PRULČEK, 30.11.2018</h2>
+       </div>
+</div>
+
+<div class="event-photo">
+ <a href="http://lendavainfo.com/foto-nastop-glasbene-skupine-groovocado-pred-ribiskim-domom/?fbclid=IwAR0_E5qLuC3YFPdGSCSW1hRPJ5ljQ8d8Hu1EUqHG1oUmRVjhRiob4U5oIGU">
+     <img src="images/Groovocado_lendava.JPG" style="width:15vw;height:auto;" class='photo'>
+ </a>
+ <div class="container">
+   <h2>FESTIVAL VINARIUM , 30.8.2018</h2>
        </div>
 </div>
 
@@ -97,7 +113,7 @@
      <img src="images/groovocado_prulcek18_1.jpg" style="width:15vw;height:auto;" class='photo'>
  </a>
  <div class="container">
-   <h2>PRULCEK, 24.5.2018</h2>
+   <h2>PRULČEK, 24.5.2018</h2>
        </div>
 </div>
 
@@ -107,7 +123,7 @@
      <img src="images/groovocado_letnioderruse17.jpg" style="width:15vw;height:auto;" class='photo'>
  </a>
  <div class="container">
-   <h2>LETNI ODER RUSE w/ Bajaga, 26.8.2017</h2>
+   <h2>LETNI ODER RUŠE w/ Bajaga, 26.8.2017</h2>
        </div>
 </div>
 
@@ -119,6 +135,15 @@
    <h2>JAZZ CLUB SATCHMO, 5.5.2017</h2>
        </div>
 </div>
+
+<div class="event-photo">
+ <a href="https://www.facebook.com/media/set/?set=a.1735471343334158&type=1&l=476087031b">
+     <img src="images/Groovocado_splav.jpg" style="width:15vw;height:auto;" class='photo'>
+ </a>
+ <div class="container">
+   <h2>SPLAV NA DRAVI, 10.6.2016</h2>
+    </div>
+      </div>
 
 <div class="event-photo">
  <a href="https://www.facebook.com/media/set/?set=a.269305380084265&type=1&l=e2c0bf4bdc/">
